--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vuepress/theme-default": "^1.0.0-alpha.47",
     "element-ui": "^2.8.2",
     "leancloud-storage": "^3.13.1",
+    "moment": "^2.24.0",
     "valine": "^1.3.6"
   }
 }
